--- a/index.html
+++ b/index.html
@@ -319,9 +319,11 @@
         <h1>CUBE COMBAT</h1>
         <p>A fast-paced browser FPS game</p>
         <button id="startButton">START GAME</button>
-        <p>Controls: WASD to move, SPACE to jump, SHIFT to sprint</p>
+        <p><strong>Desktop Controls:</strong></p>
+        <p>WASD to move, SPACE to jump, SHIFT to sprint</p>
         <p>Mouse to aim, LEFT CLICK to shoot, R to reload</p>
-        <p>1-3 to switch weapons</p>
+        <p><strong>Mobile Controls:</strong></p>
+        <p>Virtual joystick to move, tap buttons to shoot and jump</p>
     </div>
     
     <div id="gameOver">
